# isea-rag-attack-classification

./: .env.example  README.md  pyproject.toml
data/attack/indexes/: techniques_by_tid.json
data/labels/: README.md  detection_labels.csv  mapping_labels.csv
data/processed/: session_attack_mapping.parquet  sessions.parquet  sessions_scored.parquet
data/processed/session_events/: part-00000.parquet  part-00001.parquet  part-00002.parquet  part-00003.parquet  part-00004.parquet  part-00005.parquet  part-00006.parquet  part-00007.parquet  part-00008.parquet
data/raw/: README.md
docker/: Dockerfile  docker-compose.yaml
notebooks/: phase1_ingest_debug.ipynb  phase2_enrich_sessionize.ipynb  phase3_detection_score.ipynb  phase4_stix_dataset_json.ipynb  phase5_qdrant_rag_sessions_and_attack.ipynb  phase6.ipynb  phase6_session_attack_mapping.ipynb  phase7_evaluation.ipynb  phase8_detailed_evaluation.ipynb
reports/: metrics.json
src/cli/: main.py
src/detection/: embedding_anomaly.py  rules.py  score.py
src/eval/: metrics.py  plots.py  run_eval.py
src/features/: enrich.py  sessionize.py
src/ingest/: parser.py  schema.py  write_parquet.py
src/mapping/: map_sessions.py  scoring.py  summary.py
src/mitre/: download_attack.py  stix_cache.py
src/rag/: embeddings.py  index_attack.py  index_sessions.py  qdrant_client.py  retrieve.py
