[project]
name = "log-attack-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
