[project]
name = "log-attack-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.6.0",
    "torch>=2.2.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "qdrant-client>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
